--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.2.0.RELEASE'
 }
-
 tasks.named('test') {
     useJUnitPlatform()
 }
