--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8083
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/trang
+spring.datasource.username=root
+spring.datasource.password=trang200603
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
